--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_HOST=localhost
-POSTGRES_DB=db
-POSTGRES_USER=root
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=1234
 POSTGRES_PORT=5432
